// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#auth.login should login with email 1`] = `
Object {
  "avatarUrl": "http://example.com/avatar.png",
  "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
  "name": "User 1",
  "username": "user1",
}
`;

exports[`#auth.login should login with username 1`] = `
Object {
  "avatarUrl": "http://example.com/avatar.png",
  "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
  "name": "User 1",
  "username": "user1",
}
`;

exports[`#auth.login should require either username or email 1`] = `
Object {
  "error": "validation_error",
  "message": "username/email is required",
  "ok": false,
  "status": 400,
}
`;

exports[`#auth.login should require password 1`] = `
Object {
  "error": "validation_error",
  "message": "username/email is required",
  "ok": false,
  "status": 400,
}
`;

exports[`#auth.login should validate password 1`] = `
Object {
  "error": "validation_error",
  "message": "username/email is required",
  "ok": false,
  "status": 400,
}
`;

exports[`#auth.signup should require params 1`] = `
Object {
  "error": "validation_error",
  "message": "name is required",
  "ok": false,
  "status": 400,
}
`;

exports[`#auth.signup should require unique email 1`] = `
Object {
  "error": "user_exists_with_email",
  "message": "User already exists with this email",
  "ok": false,
  "status": 400,
}
`;

exports[`#auth.signup should require unique username 1`] = `
Object {
  "error": "user_exists_with_username",
  "message": "User already exists with this username",
  "ok": false,
  "status": 400,
}
`;

exports[`#auth.signup should require valid email 1`] = `
Object {
  "error": "validation_error",
  "message": "email is invalid",
  "ok": false,
  "status": 400,
}
`;
